# flutter_libepiccash

./: .gitignore  .gitmodules  .metadata  CHANGELOG.md  Dockerfile  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml  start.sh
.github/workflows/: release.yml  test.yaml
android/: build.gradle  settings.gradle
build_tool/test/: options_test.dart
cargokit/: README
cargokit/gradle/: plugin.gradle
doc/: crates.js  settings.html  source-files.js
doc/epicbox/: index.html  macro.header_list!.html  macro.header_list.html  sidebar-items.js
epicboxlib/src/: lib.rs
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/lib/: advanced_functions_view.dart  cancel_transactions_view.dart  epicbox_config.dart  init_transaction_view.dart  main.dart  mnemonic_view.dart  password_view.dart  recover_view.dart  send_transaction_view.dart  slate_transaction_view.dart  transaction_view.dart  util.dart  wallet_info_view.dart  wallet_management_view.dart  wallet_name.dart  wallet_state_manager.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
ios/: flutter_libepiccash.podspec
ios/Classes/: FlutterLibepiccashPlugin.h  FlutterLibepiccashPlugin.m  SwiftFlutterLibepiccashPlugin.swift
lib/: epic_cash.dart  epic_wallet.dart  flutter_libepiccash.dart  flutter_libepiccash_method_channel.dart  flutter_libepiccash_platform_interface.dart  lib.dart
lib/models/: balance_data.dart  slate_response.dart  transaction.dart
lib/src/: bindings_generated.dart  epic_task.dart  epic_worker.dart  errors.dart  ffi_worker.dart  parsing.dart
lib/utils/: epic_errors.dart  validation_helpers.dart
linux/: CMakeLists.txt  flutter_libepiccash_plugin.cc
linux/include/flutter_libepiccash/: flutter_libepiccash_plugin.h
macos/: flutter_libepiccash.podspec
macos/Classes/: FlutterLibepiccashPlugin.h  FlutterLibepiccashPlugin.swift
rust/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml
rust/epic-wallet/util/: Cargo.toml
rust/epicbox/: .rustc_info.json  Cargo.toml  README.md
rust/epicbox/doc/: search-index.js
rust/epicbox/doc/epicbox/: all.html  fn.main.html
rust/epicbox/doc/epicbox/broker/: sidebar-items.js
rust/epicbox/doc/epicbox/broker/broker_protocol/: enum.BrokerResponse.html  index.html  sidebar-items.js
rust/epicbox/doc/epicbox/broker/rabbit_broker/: constant.DEFAULT_MESSAGE_EXPIRATION.html  index.html  sidebar-items.js  struct.Broker.html  type.Session.html
rust/epicbox/doc/epicbox/broker/stomp/codec/: enum.ParseError.html  fn.parse_command.html  fn.parse_transmission.html  index.html  struct.Codec.html
rust/epicbox/doc/epicbox/broker/stomp/connection/: index.html  struct.OwnedCredentials.html
rust/epicbox/doc/epicbox/broker/stomp/frame/: index.html  sidebar-items.js  struct.Frame.html
rust/epicbox/doc/epicbox/broker/stomp/header/: constant.ACCEPT_VERSION.html  constant.CONTENT_LENGTH.html  constant.ID.html  constant.LOGIN.html  constant.RECEIPT.html  constant.SERVER.html  constant.SESSION.html  constant.SUBSCRIPTION.html  constant.TRANSACTION.html  constant.VERSION.html  enum.Repr.html  enum.StandardHeader.html  enum.StompVersion.html  sidebar-items.js  struct.Header.html  struct.HeaderList.html
rust/epicbox/doc/epicbox/broker/stomp/message_builder/: index.html  sidebar-items.js
rust/epicbox/doc/epicbox/broker/stomp/option_setter/: index.html
rust/epicbox/doc/epicbox/broker/stomp/session/: constant.GRACE_PERIOD_MULTIPLIER.html  enum.DisconnectionReason.html  enum.StreamState.html  fn.poll_heartbeat.html  struct.HeartBeatDelay.html  struct.ReceiptRequest.html  struct.Session.html  struct.SessionState.html
rust/epicbox/doc/epicbox/broker/stomp/session_builder/: sidebar-items.js  struct.SessionBuilder.html
rust/epicbox/doc/epicbox/broker/stomp/subscription/: sidebar-items.js
rust/epicbox/doc/epicbox/broker/stomp/subscription_builder/: sidebar-items.js  struct.SubscriptionBuilder.html
rust/epicbox/doc/epicbox/server/: index.html  sidebar-items.js  static.MAX_SUBSCRIPTIONS.html  struct.SignedPayload.html
rust/epicbox/doc/implementors/core/cmp/: trait.Eq.js
rust/epicbox/doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
rust/epicbox/doc/implementors/core/hash/: trait.Hash.js
rust/epicbox/doc/implementors/core/marker/: trait.Freeze.js  trait.StructuralPartialEq.js  trait.Unpin.js
rust/epicbox/doc/implementors/epicbox/broker/stomp/option_setter/: trait.OptionSetter.js
rust/epicbox/doc/src/epicbox/: main.rs.html
rust/epicbox/doc/src/epicbox/broker/: broker_protocol.rs.html  mod.rs.html  rabbit_broker.rs.html
rust/epicbox/doc/src/epicbox/broker/stomp/: connection.rs.html  header.rs.html  mod.rs.html  session.rs.html  subscription.rs.html  subscription_builder.rs.html  transaction.rs.html
rust/epicbox/docs/: integration.md
rust/epicbox/epicboxlib/: Cargo.toml
rust/epicbox/epicboxlib/src/client/: epicbox_subscriber.rs  epicbox_subscription_handler.rs  mod.rs
rust/epicbox/epicboxlib/src/types/: epicbox_message.rs  epicbox_response.rs  mod.rs  tx_proof.rs
rust/epicbox/src/: main.rs
rust/src/: config.rs  ffi.rs  lib.rs  listener.rs  mnemonic.rs  wallet.rs
scripts/android/: build_all.sh  build_openssl.sh  config.sh  copy_bins.sh  download.sh  install_ndk.sh  publish.sh
scripts/ios/: build_all.sh  download.sh  publish.sh
scripts/linux/: build_all.sh  copy_bins.sh  download.sh  publish.sh
scripts/linux_arm64/: build_all.sh
scripts/macos/: build_all.sh  download.sh
scripts/windows/: README.md  build_all.ps1  build_all.sh  deps.sh  download.sh
src/server/: mod.rs
test/: balances_parsing_test.dart  errors_test.dart  ffi_string_free_test.dart  flutter_libepiccash_method_channel_test.dart  flutter_libepiccash_test.dart  parsing_test.dart  transaction_model_test.dart  transactions_parsing_test.dart
windows/: CMakeLists.txt  flutter_libepiccash_plugin.cpp  flutter_libepiccash_plugin.h  flutter_libepiccash_plugin_c_api.cpp
windows/include/flutter_libepiccash/: flutter_libepiccash_plugin_c_api.h
(+111 files in other folders)
