[package]
name = "epic-ffi"
version = "0.0.1"
edition = "2021"
authors = ["Grin developers", "Epic developers", "Cypher Stack and Stack Wallet developers", "Likho", "@blacktyg3r", "sneurlax"]
description = "Epic Cash oriented for usage via FFI."
license = "Apache-2.0"

[lib]
name = "epic_ffi"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "2.31", features = ["yaml"] }
rpassword = "2.0.0"
ctrlc = { version = "3.1", features = ["termination"] }
jni = { version = "0.10.2", default-features = false, optional = true }
failure = "0.1.8"
failure_derive = "0.1.8"
prettytable-rs = "0.7"
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
simplelog = "^0.7.4"
zeroize = { version = "1.1.0", features = ["derive"] }
rand = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rustc-serialize = "0.3.24"
android_logger = "0.11.0"
chrono = "0.4.19"

epic_keychain = { path = "epic/keychain" }
epic_util = { path = "epic/util" }
epic_core = { path = "epic/core" }

epic_wallet_api = { path = "epic-wallet/api" }
epic_wallet_impls = { path = "epic-wallet/impls" }
epic_wallet_libwallet = { path = "epic-wallet/libwallet" }
epic_wallet_config = { path = "epic-wallet/config" }
epic_wallet_util = { path = "epic-wallet/util" }
epic_wallet_controller = { path = "epic-wallet/controller" }

# Epic box for posting slates and getting epic addresses.
stack_test_epicboxlib = "1.0.3"

url = "2.1.0"
futures = "0.3.15"
tokio-tungstenite = "0.10.0"
tungstenite = { version = "0.10", default-features = false }
tokio = { version = "0.2.0", features = ["full"]}
websocket = "0.21.1"
ws = "0.9.2"

[patch.crates-io]
liblmdb-sys = { git = "https://github.com/i1skn/lmdb-rs" }

[build-dependencies]
cbindgen = "0.24.3"
glob = "0.3.1"
