[package]
name = "epic-cash-wallet"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cypherstack/flutter_libepiccash"
authors = ["Cypher Stack", "Likho", "sneurlax"]
license = "MIT"
license-file = "LICENSE"

[dependencies]
clap = { version = "2.31", features = ["yaml"] }
rpassword = "2.0.0"
ctrlc = { version = "3.1", features = ["termination"] }
jni = { version = "0.10.2", default-features = false, optional = true }
failure = "0.1.8"
failure_derive = "0.1.8"
prettytable-rs = "0.7"
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
simplelog = "^0.7.4"
openssl = { version = "0.10", features = ["vendored"] }
zeroize = { version = "1.1.0", features = ["derive"] }
rand = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rustc-serialize = "0.3.24"
android_logger = "0.11.0"
chrono = "0.4.24"

stack_epic_keychain = { package = "epic_keychain", git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
stack_epic_util = { package = "epic_util", git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
stack_epic_core = { package = "epic_core", git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }

# Wallet crates: keep in-code names, source official v3.6
stack_epic_wallet_api = { package = "epic_wallet_api", git = "https://github.com/EpicCash/epic-wallet", tag = "v3.6.0" }
stack_epic_wallet_impls = { package = "epic_wallet_impls", git = "https://github.com/EpicCash/epic-wallet", tag = "v3.6.0" }
stack_epic_wallet_libwallet = { package = "epic_wallet_libwallet", git = "https://github.com/EpicCash/epic-wallet", tag = "v3.6.0" }
stack_epic_wallet_config = { package = "epic_wallet_config", git = "https://github.com/EpicCash/epic-wallet", tag = "v3.6.0" }
stack_epic_wallet_util = { package = "epic_wallet_util", git = "https://github.com/EpicCash/epic-wallet", tag = "v3.6.0" }
stack_epic_wallet_controller = { package = "epic_wallet_controller", git = "https://github.com/EpicCash/epic-wallet", tag = "v3.6.0" }

url = "2.1.0"
futures = "0.3.15"
tokio-tungstenite = "0.21.0"
tungstenite = { version = "0.21", default-features = false }
tokio = { version = "0.2.0", features = ["full"]}
websocket = "0.21.1"
ws = "0.9.2"
ffi_helpers = "0.3.0"
anyhow = "1.0.69"

# TODO: When we build for a windows target on an ubuntu runner, crunchy tries to
# get the wrong path, update this when the workflow has been updated.
#
# See: https://github.com/eira-fransham/crunchy/issues/13
crunchy = "=0.2.2"

[dev-dependencies]
hex = "0.4.3"
cbindgen = "=0.24.3"

[build-dependencies]
glob = "0.3.1"

[lib]
name = "epic_cash_wallet"
crate-type = ["staticlib", "cdylib"]

[patch.crates-io]
liblmdb-sys = { git = "https://github.com/i1skn/lmdb-rs" }
# Force all epic crates to resolve from git v3.6.0
epic_api = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_chain = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_config = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_core = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_keychain = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_p2p = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_pool = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_servers = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_store = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
epic_util = { git = "https://github.com/EpicCash/epic", tag = "v3.6.0" }
